--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel-lang/common": "^6.2",
+        "laravel-lang/lang": "^15.4",
+        "laravel/breeze": "^2.0",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
