--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@alpinejs/collapse": "^3.14.0",
+        "@alpinejs/persist": "^3.14.0",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.7",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.31",
+        "tailwindcss": "^3.1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "axios": "^1.7.2"
     }
 }
