--- a/vuejs-admin/package.json
+++ b/vuejs-admin/package.json
@@ -13,7 +13,9 @@
         "@heroicons/vue": "^2.1.3",
         "@tailwindcss/forms": "^0.5.7",
         "axios": "^1.7.2",
+        "chart.js": "^4.4.3",
         "vue": "^3.4.21",
+        "vue-chartjs": "^5.3.1",
         "vue-router": "^4.0.13",
         "vuex": "^4.0.2"
     },
