--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "stripe/stripe-php": "^14.8"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.23",
         "laravel-lang/common": "^6.2",
         "laravel-lang/lang": "^15.4",
