--- a/vuejs-admin/package.json
+++ b/vuejs-admin/package.json
@@ -9,6 +9,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+        "@ckeditor/ckeditor5-vue": "^5.1.0",
         "@headlessui/vue": "^1.7.22",
         "@heroicons/vue": "^2.1.3",
         "@tailwindcss/forms": "^0.5.7",
