--- a/vuejs-admin/package.json
+++ b/vuejs-admin/package.json
@@ -16,9 +16,13 @@
         "@tailwindcss/forms": "^0.5.7",
         "axios": "^1.7.2",
         "chart.js": "^3.9.1",
+        "sortablejs": "^1.15.2",
+        "sortablejs-vue3": "^1.2.11",
+        "uuid": "^9.0.1",
         "vue": "^3.4.21",
         "vue-chartjs": "^4.1.2",
         "vue-router": "^4.0.13",
+        "vue3-treeselect": "^0.1.10",
         "vuex": "^4.0.2"
     },
     "devDependencies": {
