--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
         "@tailwindcss/forms": "^0.5.7",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
+        "flowbite": "^2.3.0",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0"
     },
     "dependencies": {
-        "axios": "^1.7.2"
+        "axios": "^1.7.2",
+        "tailwind-scrollbar": "^3.1.0"
     }
 }
