--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+WEBHOOK_SECRET_KEY=
+
+SHIPPO_PRIVATE_KEY=
