--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "axios": "^1.7.2",
+        "flag-icons": "^7.2.3",
         "tailwind-scrollbar": "^3.1.0"
     }
 }
